--- a/style.css
+++ b/style.css
@@ -1,82 +1,119 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif ;
 }
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  background-color: #222;
+.continer{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.3),transparent),url(images/IMG-20230321-WA0191.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 0 8%;
+    position:  relative;
 }
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 40px;
+nav{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5px 0;
 }
-.card {
-  width: 350px;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: #181919;
-  padding: 50 20px;
-  overflow: hidden;
-  position: relative;
+.logo{
+    width: 120px;
+    cursor: pointer;
 }
-.card .image {
-  width: 80px;
-  height: 50px;
-  border: 2px solid red;
-  transition: 0.5s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 0 4px #2e2e2e;
+.cart-icon{
+    width: 30px;
+    cursor: pointer;
 }
-.card:hover .image {
-  background-color: var(--clr);
-  border: 2px solid #752121;
-  box-shadow: 0 0 0 300px var(--clr);
+nav ul{
+    flex: 1;
+    text-align: right;
+    padding-right: 30px;
 }
-.card .image {
-  color: var(--clr);
-  font-size: 2.5rem;
-  transition: 0.5 ease-in-out;
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 30px;
 }
+nav ul li a{
+    color:#fff;
+    text-decoration: none;
+    position: relative;
+}
+nav ul li a::after{
+    content: '';
+    width: 0%;
+    height: 3px;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    transition: width 0.3s;
 
-.card:hover .image {
-  color: #2e2e2e;
 }
-.card .desc {
-  margin-top: 30px;
-  text-align: center;
+nav ul li a:hover::after{
+width:50%;
 }
-.desc h3 {
-  font-size: 1.5 rem;
-  font-weight: 500;
-  transition: 0.5 ease-in-out;
-  color: #fff;
+.text-box{
+    color:#fff;
+    position: absolute;
+    bottom: 8%;
 }
-.card:hover .desc h3 {
-  color: #2e2e2e;
-  font-weight: 500;
+.text-box p{
+    font-size: 50px;
+    font-weight: 600;
 }
-.desc p {
-  margin: 10px 0;
-  color: #f2e9e9;
+.text-box h1{
+    font-size: 100px;
+    line-height: 160px;
+    margin-left: -10px;
+    color: transparent;
+    -webkit-text-stroke:1px #fff ;
+    background: url(images);
+    -webkit-background-clip: text;
+    background-position: 0 0;
+    animation: back 20s linear infinite;
 }
-.desc a {
-  position: relative;
-  padding: 12px 15px;
-  display: inline-block;
-  margin: 15px 40px;
-  text-decoration: none;
-  color: #2e2e2e;
-  background-color: var(--clr);
+@keyframes back{
+    100%{
+        background-position: 2000px 0;
+    }
+}
+.text-box h3{
+    font-size:40px ;
+    font-weight:500 ;
+}
+.text-box.row{
+    display: flex;
+    align-items:center ;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+.text-box a{
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-right:20px ;
+    border: 2px solid #fff;
+    display: flex;
+    align-items: center;
+}
+.text-box a span{
+    font-size: 30px;
+    line-height: 15px;
+    margin-left: 5px;
+}
+.social-icons{
+    position: absolute;
+    right: 5%;
+    bottom: 8%;
+}
+.social-icons img{
+    width: 25px;
+    display: block;
+    margin: 25px 5px;
 }
