--- a/style.css
+++ b/style.css
@@ -1,119 +1,103 @@
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: 'poppins',sans-serif ;
-}
-.continer{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.3),transparent),url(images/IMG-20230321-WA0191.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 0 8%;
-    position:  relative;
-}
-nav{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 5px 0;
-}
-.logo{
-    width: 120px;
-    cursor: pointer;
-}
-.cart-icon{
-    width: 30px;
-    cursor: pointer;
-}
-nav ul{
-    flex: 1;
-    text-align: right;
-    padding-right: 30px;
-}
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 30px;
-}
-nav ul li a{
-    color:#fff;
     text-decoration: none;
-    position: relative;
 }
-nav ul li a::after{
-    content: '';
-    width: 0%;
+footer{
+    background: linear-gradient(to right, #61045f, #AA076b);
+    border-top-left-radius: 100px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+footer *{
+    color: whitesmoke;
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 7%;
+}
+.footer-col{
+    width: 25%;
+}
+.footer-col h2{
+    font-optical-sizing: 1.7em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+p.email{
+    margin: 20px 0;
+}
+p.phone{
+    font-size: 20px;
+    font-weight: 400;
+}
+.footer-col .text-office{
+    margin-bottom: 20px;
+}
+.underline{
+    width: 70px;
     height: 3px;
+    position: relative;
+    background-color: white;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+.underline span{
+    width: 7px;
+    height: 100%;
     position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #fff;
-    transition: width 0.3s;
-
+    left: 10px;
+    background-color: rgb(63, 63, 63);
+    border-radius: 3px;
+    animation: moving 1.5s linear infinite;
 }
-nav ul li a:hover::after{
-width:50%;
-}
-.text-box{
-    color:#fff;
-    position: absolute;
-    bottom: 8%;
-}
-.text-box p{
-    font-size: 50px;
-    font-weight: 600;
-}
-.text-box h1{
-    font-size: 100px;
-    line-height: 160px;
-    margin-left: -10px;
-    color: transparent;
-    -webkit-text-stroke:1px #fff ;
-    background: url(images);
-    -webkit-background-clip: text;
-    background-position: 0 0;
-    animation: back 20s linear infinite;
-}
-@keyframes back{
+@keyframes moving{
+    0%{
+        left: -20px;
+    }
     100%{
-        background-position: 2000px 0;
+        left: 110%;
     }
 }
-.text-box h3{
-    font-size:40px ;
-    font-weight:500 ;
+.footer-col ul{
+    list-style-type: none;
+    padding-top: 10px;
 }
-.text-box.row{
-    display: flex;
-    align-items:center ;
-    flex-wrap: wrap;
-    margin-top: 30px;
+.footer-col ul li{
+    margin: 10px;
+
 }
-.text-box a{
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    margin-right:20px ;
-    border: 2px solid #fff;
-    display: flex;
-    align-items: center;
+.footer-col form{
+ margin-top: 20px;
+ border-bottom: 1px solid white;
+ padding-bottom: 10px;
+ display: flex;
 }
-.text-box a span{
-    font-size: 30px;
-    line-height: 15px;
-    margin-left: 5px;
+.footer-col form input{
+    width: 70%;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding-left: 10px;
 }
-.social-icons{
-    position: absolute;
-    right: 5%;
-    bottom: 8%;
+.footer-col form i{
+    font-size: 15px;
 }
-.social-icons img{
-    width: 25px;
-    display: block;
-    margin: 25px 5px;
+.footer-col .social-icons{
+    margin-top: 20px;
+}
+.footer-col .social-icons i{
+    padding: 10px;
+    background-color: #61045f;
+    color: whitesmoke;
+    border-radius: 50%;
+    margin: 5px;
+}
+.footer-para{
+    max-width: 50%;
 }
