--- a/style.css
+++ b/style.css
@@ -1,103 +1,81 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-footer{
-    background: linear-gradient(to right, #61045f, #AA076b);
-    border-top-left-radius: 100px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color:"background: #AA076B; 
+  background : -webkit-linear-gradient(to right, #61045F, #AA076B);  
+  background: linear-gradient(to right, #61045F, #AA076B);
 }
-footer *{
-    color: whitesmoke;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
 }
-.container{
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 7%;
+.card {
+  width: 350px;
+  height: 550px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #191b1b;
+  padding: 50 20px;
+  overflow: hidden;
+  position: relative;
 }
-.footer-col{
-    width: 25%;
-}
-.footer-col h2{
-    font-optical-sizing: 1.7em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-}
-p.email{
-    margin: 20px 0;
-}
-p.phone{
-    font-size: 20px;
-    font-weight: 400;
-}
-.footer-col .text-office{
-    margin-bottom: 20px;
-}
-.underline{
-    width: 70px;
-    height: 3px;
-    position: relative;
-    background-color: white;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    border-radius: 3px;
-    overflow: hidden;
-}
-.underline span{
-    width: 7px;
-    height: 100%;
-    position: absolute;
-    left: 10px;
-    background-color: rgb(63, 63, 63);
-    border-radius: 3px;
-    animation: moving 1.5s linear infinite;
-}
-@keyframes moving{
-    0%{
-        left: -20px;
-    }
-    100%{
-        left: 110%;
-    }
-}
-.footer-col ul{
-    list-style-type: none;
-    padding-top: 10px;
-}
-.footer-col ul li{
-    margin: 10px;
 
+.card .image {
+ 
+  border: 2px solid rgb(245, 84, 210); 
+  /* border-radius: 49% 0% 65% 53% / 44% 52% 0% 57%; */
+  transition: 0.5s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   box-shadow: 0 0 0 4px #2e2e2e; 
 }
-.footer-col form{
- margin-top: 20px;
- border-bottom: 1px solid white;
- padding-bottom: 10px;
- display: flex;
+.card:hover .image {
+  background-color: var(--clr);
+  /* border: 2px solid #752121; */
+  box-shadow: 0 0 0 300px var(--clr); 
 }
-.footer-col form input{
-    width: 70%;
-    background: transparent;
-    border: none;
-    outline: none;
-    padding-left: 10px;
+.card .image {
+  color: var(--clr);
+  font-size: 2.5rem;
+  transition: 0.5 ease-in-out;
 }
-.footer-col form i{
-    font-size: 15px;
+
+.card .desc {
+  
+  text-align: center;
+  line-height: 1.5; 
 }
-.footer-col .social-icons{
-    margin-top: 20px;
+.desc h3 {
+  margin-top: 50px;
+  font-size: 1.5 rem;
+  font-weight: 500;
+  transition: 0.5 ease-in-out;
+  color: #fff;
 }
-.footer-col .social-icons i{
-    padding: 10px;
-    background-color: #61045f;
-    color: whitesmoke;
-    border-radius: 50%;
-    margin: 5px;
+
+.desc p {
+  margin: 10px 0;
+  color: #f2e9e9;
 }
-.footer-para{
-    max-width: 50%;
+.desc a {
+  position: relative;
+  padding: 12px 15px;
+  display: inline-block;
+  margin: 15px 40px;
+  text-decoration: none;
+  color: #2e2e2e; 
+  background-color: var(--clr);
 }
